update docker compose and add nginx file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,24 @@
-version: '3'
+version: '3.8'
+
 services:
   nginx:
-    image: nginx:latest
-    container_name: nginx
+    image: nginx:alpine
+    container_name: nginx_web
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./web:/usr/share/nginx/html/web
-      - /etc/letsencrypt:/etc/letsencrypt
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./certs/fullchain.pem:/etc/ssl/certs/fullchain.pem
+      - ./certs/privkey.pem:/etc/ssl/private/privkey.pem
+      - ./web_files:/usr/share/nginx/html
     depends_on:
-      - proyectoA
-      - proyectoB
+      - chatdocument_app
 
-  proyectoA:
-    image: nginx:latest
-    container_name: proyectoA
-    volumes:
-      - ./proyectoA:/usr/share/nginx/html
+  chatdocument_app:
+    build:
+      context: ./chatdocument_app
+    image: image_chatdocument_app:latest  # Define el nombre explícitamente
+    container_name: chatdocument_app
     ports:
-      - "8081:80"
-
-  proyectoB:
-    image: nginx:latest
-    container_name: proyectoB
-    volumes:
-      - ./proyectoB:/usr/share/nginx/html
-    ports:
-      - "8082:80"
+      - "8501:8501"
