--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./certs/fullchain.pem:/etc/ssl/certs/fullchain.pem
       - ./certs/privkey.pem:/etc/ssl/private/privkey.pem
-      - ./web_files:/usr/share/nginx/html
+      - ./app_enriquevicenteh:/usr/share/nginx/html
     depends_on:
       - chatdocument_app
 
