--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ server {
     }
 
     location /chatdocument_app/ {
-        proxy_pass http://enrique.vicenteh.com:8501/;
+        proxy_pass http://157.230.88.234:8501/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
