--- a/nginx.conf
+++ b/nginx.conf
@@ -20,12 +20,38 @@ server {
         index index.html index.htm;
     }
 
+#    location /chatdocument_app/ {
+#        proxy_pass http://chatdocument_app:8501/;
+#        proxy_set_header Host $host;
+#        proxy_set_header X-Real-IP $remote_addr;
+#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#        proxy_set_header X-Forwarded-Proto $scheme;
+#        include proxy_params; 
+#    }
+
+
+    # Forward /chatdocument_app requests to the chatdocument_app service
     location /chatdocument_app/ {
         proxy_pass http://chatdocument_app:8501/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        include proxy_params; 
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Handle the _stcore requests specifically
+    location /_stcore/ {
+        proxy_pass http://chatdocument_app:8501/_stcore/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
