--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     ports:
       - "8501:8501"
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8501/ || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://172.26.0.2:8501/ || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
