--- a/nginx.conf
+++ b/nginx.conf
@@ -12,23 +12,15 @@ server {
     listen [::]:443 ssl;
     server_name enrique.vicenteh.com;
 
-    ssl_certificate /etc/ssl/certs/fullchain.pem;
-    ssl_certificate_key /etc/ssl/private/privkey.pem;
+    #ssl_certificate /etc/ssl/certs/fullchain.pem;
+    #ssl_certificate_key /etc/ssl/private/privkey.pem;
+    ssl_certificate /etc/ssl/certs/enrique.vicenteh.com.pem;
+    ssl_certificate_key /etc/ssl/private/enrique.vicenteh.com.pem;
 
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
     }
-
-#    location /chatdocument_app/ {
-#        proxy_pass http://chatdocument_app:8501/;
-#        proxy_set_header Host $host;
-#        proxy_set_header X-Real-IP $remote_addr;
-#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#        proxy_set_header X-Forwarded-Proto $scheme;
-#        include proxy_params; 
-#    }
-
 
     # Forward /chatdocument_app requests to the chatdocument_app service
     location /chatdocument_app/ {
@@ -53,5 +45,36 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
+
+# Configuración para www.vivelunahuana.com
+server {
+    listen 80;
+    listen [::]:80;
+    server_name www.vivelunahuana.com vivelunahuana.com;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name www.vivelunahuana.com vivelunahuana.com;
+    ssl_certificate /etc/ssl/certs/vivelunahuana.com.pem;
+    ssl_certificate_key /etc/ssl/private/vivelunahuana.com.pem;
+
+    location / {
+        proxy_pass http://wordpress:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    client_max_body_size 64M;
+
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+        expires max;
+        log_not_found off;
     }
 }
