--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,10 +37,18 @@ services:
     ports:
       - "8080:80"
     environment:
-      - DB_NAME=${WORDPRESS_DB_NAME}
-      - DB_USER=${WORDPRESS_DB_USER}
-      - DB_PASSWORD=${WORDPRESS_DB_PASSWORD}
-      - DB_HOST=${WORDPRESS_DB_HOST}
+      - WORDPRESS_DB_NAME=${WORDPRESS_DB_NAME}
+      - WORDPRESS_DB_USER=${WORDPRESS_DB_USER}
+      - WORDPRESS_DB_PASSWORD=${WORDPRESS_DB_PASSWORD}
+      - WORDPRESS_DB_HOST=${WORDPRESS_DB_HOST}
+      - WP_AUTH_KEY=${WP_AUTH_KEY}
+      - WP_SECURE_AUTH_KEY=${WP_SECURE_AUTH_KEY}
+      - WP_LOGGED_IN_KEY=${WP_LOGGED_IN_KEY}
+      - WP_NONCE_KEY=${WP_NONCE_KEY}
+      - WP_AUTH_SALT=${WP_AUTH_SALT}
+      - WP_SECURE_AUTH_SALT=${WP_SECURE_AUTH_SALT}
+      - WP_LOGGED_IN_SALT=${WP_LOGGED_IN_SALT}
+      - WP_NONCE_SALT=${WP_NONCE_SALT}
     volumes:
       - ./wordpress/wp-content:/var/www/html/wp-content
 
